--- a/src/themes/monterrico/app/home-page/home-news/home-news.component.html
+++ b/src/themes/monterrico/app/home-page/home-news/home-news.component.html
@@ -4,15 +4,57 @@
       <div class="d-flex flex-wrap">
         <div>
           <h1 class="display-3">Repositorio Institucional</h1>
-          <p class="lead">Escuela Superior Pedagógica Pública</p>          
+          <p class="lead">Escuela de Educación Superior Pedagógica Monterrico</p>
         </div>
-      </div>      
+      </div>       
+      <div class="barra-iconos">
+        <div class="row">
+          <div class="col-sm">
+            <div class="imagen">
+              <a href="/community-list" target="_self"><img src="assets/monterrico/images/colecciones.png"  alt=""></a>
+            </div>
+            <div class="enlace">
+              <a href="/community-list" target="_self"><h3>Colecciones</h3></a>
+            </div>            
+          </div>
+          <div class="col-sm">
+            <div class="imagen">
+              <a href="/browse/author" target="_self"><img src="assets/monterrico/images/autores.png" alt=""></a>
+            </div>
+            <div class="enlace">
+              <a href="/browse/author" target="_self"><h3>Autores</h3></a>
+            </div>            
+          </div>
+          <div class="col-sm">
+            <div class="imagen">
+              <a href="/browse/list" target="_self"><img src="assets/monterrico/images/titulos.png"></a>
+            </div>
+            <div class="enlace">
+              <a href="/browse/list" target="_self"><h3>Títulos</h3></a>
+            </div>            
+          </div>
+          <div class="col-sm">
+            <div class="imagen">
+              <a href="/browse/dateissued" target="_self"><img src="assets/monterrico/images/fechas.png"></a>
+            </div>
+            <div class="enlace">
+              <a href="/browse/dateissued" target="_self"><h3>Fechas</h3></a>
+            </div>            
+          </div>
+          <div class="col-sm">
+            <div class="imagen">
+              <a href="/browse/subject" target="_self"><img src="assets/monterrico/images/materias.png"></a>
+            </div>
+            <div class="enlace">
+              <a href="/browse/subject" target="_self"><h3>Materias</h3></a>
+            </div>            
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
   <picture class="background-image">
-    <source type="image/webp" srcset="assets/dspace/images/banner.webp 2000w, assets/dspace/images/banner-half.webp 1200w, assets/dspace/images/banner-tall.webp 768w">
-    <source type="image/jpg" srcset="assets/dspace/images/banner.jpg 2000w, assets/dspace/images/banner-half.jpg 1200w, assets/dspace/images/banner-tall.jpg 768w">
-    <img alt="" [src]="'assets/dspace/images/banner.jpg'"/><!-- without the []="''" Firefox downloads both the fallback and the resolved image -->
+    <img alt="" [src]="'assets/monterrico/images/banner-monterrico.jpeg'"/>
   </picture>
-  <small class="credits">Photo by <a href="https://www.pexels.com/@inspiredimages">@inspiredimages</a></small>
 </div>
