cambio de datos

--- a/src/themes/monterrico/app/footer/footer.component.html
+++ b/src/themes/monterrico/app/footer/footer.component.html
@@ -11,7 +11,7 @@
 
           <ul class="list-unstyled mb-0">
             <li>
-              Dirección: Panamericana Sur Km. 8.5, Surco. Lima - Perú.
+              Dirección: Jr. Morro Solar N° 982, Urb. Santa Teresa Mz. II Lote 05,  Santiago de Surco, Lima. Altura Km 8.5 de la Carretera Panamericana Sur.
             </li>
             <li>
               Correo electrónico: repositorio@monterrico.edu.pe.
