--- a/src/themes/monterrico/app/home-page/home-news/home-news.component.html
+++ b/src/themes/monterrico/app/home-page/home-news/home-news.component.html
@@ -55,6 +55,6 @@
     </div>
   </div>
   <picture class="background-image">
-    <img alt="" [src]="'assets/monterrico/images/banner-monterrico.jpeg'"/>
+    <img alt="" [src]="'assets/monterrico/images/banner-monterrico.jpg'"/>
   </picture>
 </div>
