--- a/src/themes/monterrico/app/home-page/home-news/home-news.component.html
+++ b/src/themes/monterrico/app/home-page/home-news/home-news.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex flex-wrap">
         <div>
           <h1 class="display-3">Repositorio Institucional</h1>
-          <p class="lead">Escuela de Educación Superior Pedagógica Monterrico</p>
+          <p class="lead">Escuela de Educación Superior Pedagógica Pública Monterrico</p>
         </div>
       </div>       
       <div class="barra-iconos">
